0857PM-Nov01-2019-Commit#3-Changed the Index file!
0857PM-Nov01-2019-Commit#3-Changed the Index file!

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Mobile Menu Start -->
         <ul class="mobile-menu">
           <li> <a class="page-scroll" href="#hero-area">Home</a> </li>
-          <li> <a class="page-scroll" href="#contact">Contact</a> </li>
+          <li> <a class="page-scroll" href="#contact">Contact Us</a> </li>
         </ul>
         <!-- Mobile Menu End --> </nav>
       <!-- Navbar End -->
@@ -67,7 +67,7 @@
     <section id="services" class="section">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">My Work!</h2>
+          <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">My Work! Version 2.0</h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
           <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem
             ipsum dolor sit amet, consectetur adipisicing elit. Quaerat,
